Add user manage in admin and some page left
Cải thiện 1 tí về view

--- a/Views/Home/Detail.cshtml
+++ b/Views/Home/Detail.cshtml
@@ -82,7 +82,9 @@
                     </div>
                     <div class="lbten">
                         <label for="lbten">
-                            @Model.category_name
+                            <a asp-controller="Home" asp-action="Category" asp-route-category="@Model.category" style="text-decoration: none">
+                                @Model.category_name
+                            </a>
                         </label>
                     </div>
                 </div>
