--- a/Views/Order/Index.cshtml
+++ b/Views/Order/Index.cshtml
@@ -46,7 +46,7 @@
                         <div class="donhang">
                             <div class="xacnhanngaydat">
                                 <div class="ngaydat">
-                                    <a href="" class="madonhang">
+                                    <a asp-controller="Order" asp-action="Detail" asp-route-id="@order.id" class="madonhang">
                                         #@order.id
                                     </a><br/>
                                     <label for="lbngaydat">
